# isit_ml_labs_spring

./: README.md  pyproject.toml
concurrency_lab/: daemon_executor.py  pytest.ini  task_pool_executor.py
lab1-python-intro/7-comprehensions/: test_public.py
lab1/lecture/: NumpyAndPandas.ipynb
lab2-libs/: README.md
lab3-trees/: decision_trees_1.ipynb  decision_trees_2.ipynb
lab4-graphs/: graphs_strike_back.ipynb
lab_extra-concurrency/: test_daemon_executor.py
lab_extra_concurrency/: README.md
